# dioxionary

./: Cargo.toml
src/: cli.rs  dict.rs  history.rs  lib.rs  logseq.rs  review.rs  review_helper.rs  spaced_repetition.rs  stardict.rs  supermemo.rs  unicode.rs
src/fsrs/: mod.rs  review.rs  sqlite_history.rs
src/sm2/: mod.rs  review.rs
