[package]
name = "dioxionary"
version = "1.0.5"
edition = "2021"
authors = ["vaaandark <vaaandark@gmail.com>"]
description = "Remember all words in terminal!"
license = "GPL-2.0"
homepage = "https://github.com/vaaandark/dioxionary"
repository = "https://github.com/vaaandark/dioxionary"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "default-tls"], default-features = false }
dirs = "5"
rusqlite = "0.30.0"
chrono = { features = ["clock", "serde"], default-features = false, version = "0.4" }
itertools = { default-features = false, version = "0.12.1" }
clap = { version = "4", features = ["derive", "help"], default-features = false }
prettytable = { default-features = false, version = "0.10.0" }
eio = { default-features = false, version = "0.1.2" }
flate2 = { version = "1", features = ["any_zlib", "libz-sys"], default-features = false }
rustyline = { git = "https://github.com/lengyijun/rustyline", branch = "lower_sqlite_version", features = ["derive", "with-sqlite-history"] }
dialoguer = { default-features = false, version = "0.11.0" }
tokio = { version = "1", default-features = false }
rodio = "0.17.3"
clap_complete = "4"
anyhow = "1"
walkdir = "2"
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "^0"
pulldown-cmark-mdcat = "2"
mdcat = "2"
syntect = "5"
# pulldown-cmark-mdcat-ratatui = { path = "../mdcat-ratatui/pulldown-cmark-mdcat" , package = "pulldown-cmark-mdcat" }
pulldown-cmark-mdcat-ratatui = { git = "https://github.com/lengyijun/mdcat-ratatui" , branch = "ratatui", package = "pulldown-cmark-mdcat" }
shadow-rs = "0"
charcoal-dict = {git = "https://github.com/lengyijun/charcoal", branch = "used_in_dioxionary" }

[dependencies.fsrs]
version = "0.5.5"

[build-dependencies]
shadow-rs = "0"
